Make certain all plugins can be compiled with maven
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36378 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/livegps/pom.xml
+++ b/livegps/pom.xml
@@ -15,6 +15,7 @@
         </developer>
     </developers>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <plugin.src.dir>src</plugin.src.dir>
         <plugin.main.version>19044</plugin.main.version>
         <plugin.author>Frederik Ramm</plugin.author>
