--- a/pom.xml
+++ b/pom.xml
@@ -491,5 +491,130 @@
         <module>pmtiles</module>
       </modules>
     </profile>
+    <profile>
+      <id>areaselector</id>
+      <activation><file><exists>areaselector/pom.xml</exists></file></activation>
+      <modules><module>areaselector</module></modules>
+    </profile>
+    <profile>
+      <id>austriaaddresshelper</id>
+      <activation><file><exists>austriaaddresshelper/pom.xml</exists></file></activation>
+      <modules><module>austriaaddresshelper</module></modules>
+    </profile>
+    <profile>
+      <id>auto-tools</id>
+      <activation><file><exists>auto-tools/pom.xml</exists></file></activation>
+      <modules><module>auto-tools</module></modules>
+    </profile>
+    <profile>
+      <id>Building-Generalization</id>
+      <activation><file><exists>Building-Generalization/pom.xml</exists></file></activation>
+      <modules><module>Building-Generalization</module></modules>
+    </profile>
+    <profile>
+      <id>changeset-viewer</id>
+      <activation><file><exists>changeset-viewer/pom.xml</exists></file></activation>
+      <modules><module>changeset-viewer</module></modules>
+    </profile>
+    <profile>
+      <id>Color</id>
+      <activation><file><exists>Color/pom.xml</exists></file></activation>
+      <modules><module>Color</module></modules>
+    </profile>
+    <profile>
+      <id>configuration</id>
+      <activation><file><exists>configuration/pom.xml</exists></file></activation>
+      <modules><module>configuration</module></modules>
+    </profile>
+    <profile>
+      <id>conflation</id>
+      <activation><file><exists>conflation/pom.xml</exists></file></activation>
+      <modules><module>conflation</module></modules>
+    </profile>
+    <profile>
+      <id>continuos-download</id>
+      <activation><file><exists>continuos-download/pom.xml</exists></file></activation>
+      <modules><module>continuos-download</module></modules>
+    </profile>
+    <profile>
+      <id>Dxf-Import</id>
+      <activation><file><exists>Dxf-Import/pom.xml</exists></file></activation>
+      <modules><module>Dxf-Import</module></modules>
+    </profile>
+    <profile>
+      <id>gridify</id>
+      <activation><file><exists>gridify/pom.xml</exists></file></activation>
+      <modules><module>gridify</module></modules>
+    </profile>
+    <profile>
+      <id>improve-way</id>
+      <activation><file><exists>improve-way/pom.xml</exists></file></activation>
+      <modules><module>improve-way</module></modules>
+    </profile>
+    <profile>
+      <id>indoorhelper</id>
+      <activation><file><exists>indoorhelper/pom.xml</exists></file></activation>
+      <modules><module>indoorhelper</module></modules>
+    </profile>
+    <profile>
+      <id>kartverketimport</id>
+      <activation><file><exists>kartverketimport/pom.xml</exists></file></activation>
+      <modules><module>kartverketimport</module></modules>
+    </profile>
+    <profile>
+      <id>Mapillary</id>
+      <activation><file><exists>Mapillary/pom.xml</exists></file><jdk>[17,]</jdk></activation>
+      <modules><module>Mapillary</module></modules>
+    </profile>
+    <profile>
+      <id>MapRoulette</id>
+      <activation><file><exists>MapRoulette/pom.xml</exists></file><jdk>[17,]</jdk></activation>
+      <modules><module>MapRoulette</module></modules>
+    </profile>
+    <profile>
+      <id>osm-obj-info</id>
+      <activation><file><exists>osm-obj-info/pom.xml</exists></file></activation>
+      <modules><module>osm-obj-info</module></modules>
+    </profile>
+    <profile>
+      <id>PicLayer</id>
+      <activation><file><exists>PicLayer/pom.xml</exists></file></activation>
+      <modules><module>PicLayer</module></modules>
+    </profile>
+    <profile>
+      <id>pt_assistant</id>
+      <activation><file><exists>pt_assistant/pom.xml</exists></file><jdk>[17,]</jdk></activation>
+      <modules><module>pt_assistant</module></modules>
+    </profile>
+    <profile>
+      <id>rex</id>
+      <activation><file><exists>rex/pom.xml</exists></file></activation>
+      <modules><module>rex</module></modules>
+    </profile>
+    <profile>
+      <id>ShapeTools</id>
+      <activation><file><exists>ShapeTools/pom.xml</exists></file></activation>
+      <modules><module>ShapeTools</module></modules>
+    </profile>
+    <profile>
+      <id>todo</id>
+      <activation><file><exists>todo/pom.xml</exists></file><jdk>[17,]</jdk></activation>
+      <modules><module>todo</module></modules>
+    </profile>
+    <profile>
+      <id>turnlanes-tagging</id>
+      <activation><file><exists>turnlanes-tagging/pom.xml</exists></file></activation>
+      <modules><module>turnlanes-tagging</module></modules>
+    </profile>
+    <profile>
+      <id>validations_testing</id>
+      <activation><file><exists>validations_testing/pom.xml</exists></file></activation>
+      <modules><module>validations_testing</module></modules>
+    </profile>
+    <profile>
+      <id>wikipedia</id>
+      <activation><file><exists>wikipedia/pom.xml</exists></file></activation>
+      <modules><module>wikipedia</module></modules>
+    </profile>
   </profiles>
 </project>
