--- a/eventbus/pom.xml
+++ b/eventbus/pom.xml
@@ -14,6 +14,7 @@
         </developer>
     </developers>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <plugin.src.dir>src</plugin.src.dir>
         <plugin.main.version>19044</plugin.main.version>
         <plugin.author>Don-vip</plugin.author>
