Clean up a lot of lint issues in cadastre-fr
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36385 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/cadastre-fr/pom.xml
+++ b/cadastre-fr/pom.xml
@@ -28,7 +28,8 @@
         <plugin.link>https://wiki.openstreetmap.org/wiki/FR:JOSM/Fr:Plugin/Cadastre</plugin.link>
         <plugin.stage>60</plugin.stage>
         <plugin.requires>apache-commons;ejml;jts;geotools</plugin.requires>
-        <plugin.minimum.java.version>11</plugin.minimum.java.version>
+        <java.lang.version>17</java.lang.version>
+        <plugin.minimum.java.version>${java.lang.version}</plugin.minimum.java.version>
     </properties>
     <dependencies>
         <dependency>
