fix build.xml java version
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36393 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/cadastre-fr/build.xml
+++ b/cadastre-fr/build.xml
@@ -16,6 +16,7 @@
     <property name="plugin.stage" value="60"/>
     <property name="plugin.requires" value="apache-commons;ejml;jts;geotools"/>
     <property name="plugin.minimum.java.version" value="17"/>
+    <property name="java.lang.version" value="17" />
 
     <!-- ** include targets that all plugins have in common ** -->
     <import file="../build-common.xml"/>
