--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,8 @@
     <!-- Specific plugins -->
     <property name="java21_plugins" value="FIT/build.xml
                                             MicrosoftStreetside/build.xml" />
-    <property name="java17_plugins" value="javafx/build.xml
+    <property name="java17_plugins" value="cadastre-fr(build.xml
+                                            javafx/build.xml
                                             imageio/build.xml
                                             Mapillary/build.xml
                                             MapRoulette/build.xml
