drop 1.5 at wrong place
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36420 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.openstreetmap.josm</groupId>
     <artifactId>josm-parent</artifactId>
-    <version>1.5-SNAPSHOT</version>
+    <version>SNAPSHOT</version>
     <relativePath>../core/nodist/pom.xml</relativePath>
   </parent>
 
