see #23716 - unittest must also use 1.5-SNAPSHOT
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36421 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
       <dependency>
         <groupId>org.openstreetmap.josm</groupId>
         <artifactId>josm-unittest</artifactId>
-        <version>SNAPSHOT</version>
+        <version>1.5-SNAPSHOT</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
