and one more typo
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36427 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
                                             MicrosoftStreetside/build.xml" />
     <property name="java17_plugins" value="cadastre-fr/build.xml
                                             javafx/build.xml
-                                            ImageIo/build.xml
+                                            ImageIO/build.xml
                                             Mapillary/build.xml
                                             MapRoulette/build.xml
                                             pmtiles/build.xml
