see #24278 - add new EXIF metadata (patch by StephaneP, modified), fix mvn test function
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36436 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/photo_geotagging/pom.xml
+++ b/photo_geotagging/pom.xml
@@ -16,7 +16,7 @@
     </developers>
     <properties>
         <plugin.src.dir>src</plugin.src.dir>
-        <plugin.main.version>19044</plugin.main.version>
+        <plugin.main.version>19389</plugin.main.version>
         <plugin.author>Paul Hartmann</plugin.author>
         <plugin.class>org.openstreetmap.josm.plugins.photo_geotagging.GeotaggingPlugin</plugin.class>
         <plugin.description>Write gps position info to the image file header. Run this feature from the right click menu of the image layer.</plugin.description>
@@ -31,6 +31,21 @@
             <artifactId>apache-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
