fix #21523: Setting the direction of a panned 360 photo causes a counterintuitive result - apply photoadjust_21523_fix_direction_360.patch by gillux: "The arrow direction does not display the exif direction angle, instead it displays exif angle + image viewer angle. So when the plugin sets the exif angle from the arrow direction, it needs to substract the image viewer angle from it." - remove targets from build.xml which invoke perl or overwrite the code to build javadoc
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36463 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/photoadjust/build.xml
+++ b/photoadjust/build.xml
@@ -25,44 +25,10 @@
 	
     <!-- ** include targets that all plugins have in common ** -->
     <import file="../build-common.xml"/>
-    <!-- ** internationalization ** -->
-    <import file="i18n/build-i18n.xml"/>
-
-    <target name="pot" description="Extract translatable strings from source." depends="gettext-init">
-        <mkdir dir="${plugin.po.dir}"/>
-        <gettext-extract keysFile="${ant.project.name}.pot" poDirectory="${plugin.po.dir}" keywords="-k -ktrc:1c,2 -kmarktrc:1c,2 -ktr -kmarktr -ktrn:1,2 -ktrnc:1c,2,3">
-            <fileset dir="${plugin.src.dir}" includes="**/*.java"/>
-        </gettext-extract>
-        <echo file="${plugin.po.dir}/${ant.project.name}.pot" append="true">
-#. Plugin ${ant.project.name}
-#: build.xml:1
-msgid "${plugin.description}"
-msgstr ""
-</echo>
-    </target>
-
-    <!--
+  <!--
     **********************************************************
-    ** javadoc - create the plugin documentation
+    ** compile - complies the source tree
     **********************************************************
     -->
-    <target name="javadoc" description="generate documentation">
-        <javadoc destdir="${plugin.javadoc.dir}"
-                sourcepath="${plugin.src.dir}"
-                windowtitle="${ant.project.name}"
-                linksource="true"
-                private="true">
-            <classpath>
-                <pathelement location="${josm}"/>
-            </classpath>
-            <!-- Paths are relative to javadoc destdir (${plugin.javadoc.dir}). -->
-            <link href="../../../core/javadoc/"/>
-            <link href="https://josm.openstreetmap.de/doc/"/>
-            <link href="https://docs.oracle.com//javase/8/docs/api/"/>
-        </javadoc>
-    </target>
-
-    <target name="additional-manifest">
-        <antcall target="mftrans"/>
-    </target>
+  
 </project>
